--- a/azure-pipelines-iac-tf-eks.yml
+++ b/azure-pipelines-iac-tf-eks.yml
@@ -8,7 +8,7 @@ variables:
   # Build variables
   awsECRServiceConnection: 'aws-ecr-connection'
   imageRepository: 'flask_static_app'
-  ecrRegistry: '578478003474.dkr.ecr.us-east-1.amazonaws.com' # Your actual ECR URI
+  ecrRegistry: '905418462597.dkr.ecr.us-east-1.amazonaws.com/flask_static_app' # Your actual ECR URI
   dockerfilePath: 'src/Dockerfile'
   tag: '$(Build.BuildId)'
   imagePullPolicy: 'Always'
@@ -79,15 +79,15 @@ stages:
         awsSubCommand: 'update-kubeconfig'
         awsArguments: '--name $(getClusterName.EKS_CLUSTER_NAME)'
         
-    # - task: AWSCLI@1
-    #   displayName: 'Check if ECR Repository exists'
-    #   inputs:
-    #     awsCredentials: 'aws_cli'
-    #     regionName: $(awsRegion)
-    #     awsCommand: 'ecr'
-    #     awsSubCommand: 'describe-repositories'
-    #     awsArguments: '--repository-names $(imageRepository)'
-    #   continueOnError: true
+    - task: AWSCLI@1
+      displayName: 'Check if ECR Repository exists'
+      inputs:
+        awsCredentials: 'aws_cli'
+        regionName: $(awsRegion)
+        awsCommand: 'ecr'
+        awsSubCommand: 'describe-repositories'
+        awsArguments: '--repository-names $(imageRepository)'
+      continueOnError: true
         
     - task: AWSCLI@1
       displayName: 'Create ECR Repository if not exists'
